--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="icon flex-shrink-0"><i class="fa-solid bi-kanban"></i></div>
             <div>
               <h4 class="title">Track and manage your shipments from anywhere</h4>
-              <p class="description">Ship and manage your packages effectively. Save time and money when you ship with Heroshe.</p>
+              <p class="description">Ship and manage your packages effectively. Save time and money when you ship with Kari.</p>
               <a href="service-details.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
@@ -195,7 +195,7 @@
                   </h3>
                   <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      Get your valid US address when you sign up with Heroshe. Use it as your delivery address at checkout or have your packages sent there by loved ones
+                      Get your valid US address when you sign up with Kari. Use it as your delivery address at checkout or have your packages sent there by loved ones
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -583,7 +583,7 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                     <i class="bi bi-question-circle question-icon"></i>
-                    If I get scammed by someone using the Heroshe warehouse address, can I get my packages back?
+                    If I get scammed by someone using the Kari warehouse address, can I get my packages back?
                   </button>
                 </h3>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
