--- a/index.html
+++ b/index.html
@@ -401,10 +401,8 @@
                 <li><i class="bi bi-check"></i>Storage & Shipping: Customs duties,</li>
                 <li><i class="bi bi-check"></i>Taxes, VAT, and clearing fees.</li>
                 <li><i class="bi bi-check"></i>Free Delivery & Pickup</li>
-                <li class="na"><i class="bi bi-x"></i> <span>No Tax! We'll Cover It!</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                <li><i class="bi bi-check"></i> <span>No Tax! We'll Cover It!</span></li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -418,7 +416,6 @@
                 <li><i class="bi bi-check"></i>Free Delivery & Pickup</li>
                 <li><i class="bi bi-check"></i>No Tax! We'll Cover It!</li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -431,9 +428,7 @@
                 <li><i class="bi bi-check"></i>Taxes, VAT, and clearing fees.</li>
                 <li><i class="bi bi-check"></i>Free Delivery & Pickup</li>
                 <li><i class="bi bi-check"></i>No Tax! We'll Cover It!</li>
-                <li><i class="bi bi-check"></i> Massa ultricies mi quis hendrerit</li>
               </ul>
-              <a href="#" class="buy-btn">Buy Now</a>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -639,7 +634,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>Logis</span>
+            <span>Kari</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -675,11 +670,11 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            A108 Adam Street <br>
-            New York, NY 535022<br>
-            United States <br><br>
+            Micahael Cole Drive <br>
+            Lekki Phase 1<br>
+            Lagos, Nigeria<br><br>
             <strong>Phone:</strong> +1 5589 55488 55<br>
-            <strong>Email:</strong> info@example.com<br>
+            <strong>Email:</strong> kari@example.com<br>
           </p>
 
         </div>
