changed a couple of stuffs

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="get-a-quote" href="https://karip-d1f31.web.app/login">Login</a></li>
+          <li><a  href="https://karip-d1f31.web.app/login">Login</a></li>
+          <li><a  href="https://karip-d1f31.web.app/register">Register</a></li>
         </ul>
       </nav><!-- .navbar -->
 
